2017-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/81346
	* gcc.dg/tree-ssa/pr81346-5.c: New test.

2017-07-19  Tom de Vries  <tom@codesourcery.com>

	* gcc.target/nvptx/decl-init.c: Update alignment.
	* gcc.target/nvptx/slp-2-run.c: New test.
	* gcc.target/nvptx/slp-2.c: New test.
	* gcc.target/nvptx/v2di.c: New test.

2017-07-19  Tom de Vries  <tom@codesourcery.com>

	* gcc.target/nvptx/slp-run.c: New test.
	* gcc.target/nvptx/slp.c: New test.
	* gcc.target/nvptx/v2si-cvt.c: New test.
	* gcc.target/nvptx/v2si-run.c: New test.
	* gcc.target/nvptx/v2si.c: New test.
	* gcc.target/nvptx/vec.inc: New test.

2017-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/81346
	* gcc.dg/tree-ssa/pr81346-1.c: New test.
	* gcc.dg/tree-ssa/pr81346-2.c: New test.
	* gcc.dg/tree-ssa/pr81346-3.c: New test.
	* gcc.dg/tree-ssa/pr81346-4.c: New test.
	* gcc.target/i386/umod-3.c: Hide comparison against 1 from the
	compiler to avoid X / C1 op C2 optimization to trigger.

2017-07-19  Martin Liska  <mliska@suse.cz>

	PR sanitizer/63361
	* c-c++-common/ubsan/float-cast-overflow-1.c: Add either
	-ffloat-store or -mieee for targets that need it.

2017-07-18  Tom de Vries  <tom@codesourcery.com>

	PR middle-end/81464
	* gfortran.dg/pr81464.f90: New test.

2017-07-18  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81471
	* gcc.target/i386/pr81471.c: New test.

2017-06-18  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81410
	* gcc.dg/vect/pr81410.c: New testcase.

2017-07-18  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/81462
	* g++.dg/torture/pr81462.C: New testcase.

2017-07-18  Bin Cheng  <bin.cheng@arm.com>

	PR target/81408
	* g++.dg/tree-ssa/pr81408.C: New.
	* gcc.dg/tree-ssa/pr19210-1.c: Check dump message rather than warning.

2017-07-18  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80620
	PR tree-optimization/81403
	* gcc.dg/torture/pr80620.c: New testcase.
	* gcc.dg/torture/pr81403.c: Likewise.
