@@ -13,6 +13,7 @@ do_test (void)
 int
 main ()
 {
+#ifdef __BUILTIN_CPU_SUPPORTS__
   /* The BMI2 test for pext test requires the Bit Permute doubleword
      (bpermd) instruction added in PowerISA 2.06 along with the VSX
      facility.  So we can test for arch_2_06.  */
@@ -27,7 +28,7 @@ main ()
   else
     printf ("SKIPPED\n");
 #endif
-
+#endif /* __BUILTIN_CPU_SUPPORTS__ */
   return 0;
 }
 
